--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 notes.txt
 notes.txt
+363384-the-stanley-parable-collector-s-edition-windows-front-cover.jpg
+363402-the-stanley-parable-collector-s-edition-windows-other.jpg
+363403-the-stanley-parable-collector-s-edition-windows-other.jpg
