--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 notes.txt
-notes.txt
 363384-the-stanley-parable-collector-s-edition-windows-front-cover.jpg
 363402-the-stanley-parable-collector-s-edition-windows-other.jpg
 363403-the-stanley-parable-collector-s-edition-windows-other.jpg
+Android_robot.svg
+box.pdf
+box.svg
+cd.pdf
+cd.svg
+cd.svg.2022_03_25_13_19_23.0.svg
+drawing.svg
+drawing.svg.2022_03_25_11_52_56.0.svg
+drawing.svg.2022_03_25_11_59_51.0.svg
+drawing.svg.2022_03_25_12_08_12.0.svg
+drawing.svg.2022_03_25_12_10_29.0.svg
+logo.svg
